
####   Don't forget to change the version number in configure.ac!   ####

19 Oct 2005 Don't allow windows paths to confuse shared_ckd_init - Fish
18 Oct 2005 Setting of excarid for ASTE-instance exception (Fish) - Roger Bowler
15 Oct 2005 Fix panel color - Jay & Greg Smith
15 Oct 2005 Fix ASTE instance number handling in PC - Jan Jaeger
12 Oct 2005 cckd: gcol moves l2 tables to the front - Greg Smith
12 Oct 2005 cckd_comp improvements - Greg Smith
11 Oct 2005 Minor change in CU14, thanks Roger - Bernard van der Helm
10 Oct 2005 MIDAW list must not cross a page boundary - Roger Bowler
10 Oct 2005 IDTE instruction is RRF_RM format with unused M4 operand - Roger Bowler
07 Oct 2005 Display SIGP order number in addition to description - Roger Bowler
06 Oct 2005 Store Facility List Extended (STFLE) - Roger Bowler
06 Oct 2005 Implemented ETF2 enhancements, still having the flu - Bernard van der Helm
06 Oct 2005 Implemented ETF3 and crypto while having the flu - Bernard van der Helm
05 Oct 2005 Fix segfault in HSCH if device is startpending - Greg
05 Oct 2005 Activate FEATURE_EXTENDED_IMMEDIATE - Roger Bowler
05 Oct 2005 Corrections to FLOGR instruction - Roger Bowler
05 Oct 2005 MIDAW corrections - Roger Bowler
04 Oct 2005 merge FEATURE_LOAD_ADDITIONAL into FEATURE_EXTENDED_IMMEDIATE - Roger Bowler
04 Oct 2005 rename FEATURE_LOAD_PAGE_TABLE_ENTRY_ADDRESS as FEATURE_DAT_ENHANCEMENT_FACILITY_2 - Roger Bowler
04 Oct 2005 rename FEATURE_BRANCH_DETECTION as FEATURE_PER3 - Roger Bowler
04 Oct 2005 rename FEATURE_CPACF_ENHANCEMENTS as FEATURE_MESSAGE_SECURITY_ASSIST_EXTENSION_1 - Roger Bowler
22 Sep 2005 tape/27: *proper* VC7 Large File Support - Fish 
21 Sep 2005 Init cckd->l2active to -1 instead of 0 - Greg
21 Sep 2005 tweak concpy to avoid double byteswap - Fish
21 Sep 2005 Add inline assembler assists to startup buildinfo display - Fish
21 Sep 2005 sysblk.mipsrate now per second instead of millisecond, fix