@@ -402,7 +402,9 @@ Unknown OS tailor specification <em>tailor</em>
   <dd>The OS tailoring value <code><em>tailor</em></code> specified on the
 <code>OSTAILOR</code> configuration statement at line number <code><em>lineno</em></code> of
 the file named <code><em>filename</em></code> must be either
-<code>OS/390</code>, <code>VSE</code>,
+<code>OS/390</code>,
+<code>z/OS</code>,
+<code>VSE</code>,
 <code>VM</code>, <code>LINUX</code>, <code>NULL</code>, or
 <code>QUIET</code>.
   <dt>Action
@@ -943,6 +945,6 @@ If you have a question about Hercules, see the
 <a href="hercmsg.html"><img src="gifs/back.gif" border=0 alt="back"></a>
 </center>
 <small>
-<p>Last updated 4 July 2005
+<p>Last updated 19 October 2005
 </BODY>
 </HTML>
